# java-version-manager

./: .prettierrc  Cargo.toml  LICENSE  Readme.md
src/: config.rs  main.rs
src/models/: env_variable.rs  menu_command.rs  mod.rs
src/program/: config.rs  mod.rs
src/program/models/: env_variable.rs  linux_variation.rs  menu_command.rs  mod.rs  variation.rs  win_variation.rs
src/program/utils/: file_utils.rs  menu_utils.rs  mod.rs  print_utils.rs
src/program/variation/: linux_variation.rs  mod.rs  win_variation.rs
src/utils/: file_utils.rs  menu_utils.rs  mod.rs  print_utils.rs
tests/: models_test.rs  tests.rs
